# rust-service

./: Cargo.toml  Makefile
migrations/: 20220402190605_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
