[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde = {version = "1", features = ["derive"]}

[dev-dependencies]
reqwest = "0.11"

[dependencies.sqlx] 
version = "0.5.7" 
default-features = false 
features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate" ]

