[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = "0.4.15"
config = "0.11"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1", features = ["log"]}
tracing-bunyan-formatter = "0.3"
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
uuid = {version = "0.8.1", features = ["v4"]}
tracing-log = "0.1"

[dev-dependencies]
reqwest = "0.11"

[dependencies.sqlx]
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
version = "0.5.7"

